// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`controlled version should render collapsed version 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiPaper-root MuiAccordion-root makeStyles-root makeStyles-bordersAll MuiAccordion-rounded MuiPaper-elevation0 MuiPaper-rounded"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        class="MuiButtonBase-root MuiAccordionSummary-root WithStyles(ForwardRef(AccordionSummary))-root makeStyles-summary"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiAccordionSummary-content WithStyles(ForwardRef(AccordionSummary))-content makeStyles-content"
        >
          <div>
            Fryderyk Chopin
          </div>
          <div
            class="makeStyles-expandIconAlignTop"
          >
            <button
              class="MuiButtonBase-root PicassoButton-small PicassoButtonAction-small PicassoButton-secondary PicassoButton-root PicassoButtonAction-root"
              data-component-type="button"
              tabindex="0"
              type="button"
            >
              <span
                class="Container-centerAlignItems Container-flex Container-inline PicassoButton-content PicassoButtonAction-content"
              >
                <svg
                  class="SvgArrowDownMinor16-root PicassoButton-icon PicassoButtonAction-icon makeStyles-expandIcon"
                  style="min-width: 16px; min-height: 16px;"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M11.997 5.29l.707.707-4 4-.707.707-.707-.707-4-4 .707-.707 4 4 4-4z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiCollapse-container MuiCollapse-hidden"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              role="region"
            >
              <div
                class="MuiAccordionDetails-root AccordionDetails-root makeStyles-details"
              >
                <div
                  id="details"
                >
                  Fryderyk Chopin was born in Żelazowa Wola, 46 kilometres west of Warsaw, in what was then the Duchy of Warsaw, a Polish state established by Napoleon. The parish baptismal record gives his birthday as 22 February 1810, and cites his given names in the Latin form Fridericus Franciscus (in Polish, he was Fryderyk Franciszek). However, the composer and his family used the birthdate 1 March, which is now generally accepted as the correct date.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`controlled version should render expanded version 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiPaper-root MuiAccordion-root makeStyles-root makeStyles-bordersAll Mui-expanded MuiAccordion-rounded MuiPaper-elevation0 MuiPaper-rounded"
    >
      <div
        aria-disabled="false"
        aria-expanded="true"
        class="MuiButtonBase-root MuiAccordionSummary-root WithStyles(ForwardRef(AccordionSummary))-root makeStyles-summary Mui-expanded"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiAccordionSummary-content WithStyles(ForwardRef(AccordionSummary))-content makeStyles-content Mui-expanded"
        >
          <div>
            Fryderyk Chopin
          </div>
          <div
            class="makeStyles-expandIconAlignTop"
          >
            <button
              class="MuiButtonBase-root PicassoButton-small PicassoButtonAction-small PicassoButton-secondary PicassoButton-root PicassoButtonAction-root"
              data-component-type="button"
              tabindex="0"
              type="button"
            >
              <span
                class="Container-centerAlignItems Container-flex Container-inline PicassoButton-content PicassoButtonAction-content"
              >
                <svg
                  class="SvgArrowDownMinor16-root PicassoButton-icon PicassoButtonAction-icon makeStyles-expandIcon makeStyles-expandIconExpanded"
                  style="min-width: 16px; min-height: 16px;"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M11.997 5.29l.707.707-4 4-.707.707-.707-.707-4-4 .707-.707 4 4 4-4z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiCollapse-container MuiCollapse-entered"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              role="region"
            >
              <div
                class="MuiAccordionDetails-root AccordionDetails-root makeStyles-details"
              >
                <div
                  id="details"
                >
                  Fryderyk Chopin was born in Żelazowa Wola, 46 kilometres west of Warsaw, in what was then the Duchy of Warsaw, a Polish state established by Napoleon. The parish baptismal record gives his birthday as 22 February 1810, and cites his given names in the Latin form Fridericus Franciscus (in Polish, he was Fryderyk Franciszek). However, the composer and his family used the birthdate 1 March, which is now generally accepted as the correct date.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`default version for sections should render default version 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiPaper-root MuiAccordion-root makeStyles-root makeStyles-bordersAll MuiAccordion-rounded MuiPaper-elevation0 MuiPaper-rounded"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        class="MuiButtonBase-root MuiAccordionSummary-root WithStyles(ForwardRef(AccordionSummary))-root makeStyles-summary"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiAccordionSummary-content WithStyles(ForwardRef(AccordionSummary))-content makeStyles-content"
        >
          <div>
            Fryderyk Chopin
          </div>
          <div
            class="makeStyles-expandIconAlignTop"
          >
            <button
              class="MuiButtonBase-root PicassoButton-small PicassoButtonAction-small PicassoButton-secondary PicassoButton-root PicassoButtonAction-root"
              data-component-type="button"
              tabindex="0"
              type="button"
            >
              <span
                class="Container-centerAlignItems Container-flex Container-inline PicassoButton-content PicassoButtonAction-content"
              >
                <svg
                  class="SvgArrowDownMinor16-root PicassoButton-icon PicassoButtonAction-icon makeStyles-expandIcon"
                  style="min-width: 16px; min-height: 16px;"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M11.997 5.29l.707.707-4 4-.707.707-.707-.707-4-4 .707-.707 4 4 4-4z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiCollapse-container MuiCollapse-hidden"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              role="region"
            >
              <div
                class="MuiAccordionDetails-root AccordionDetails-root makeStyles-details"
              >
                <div
                  id="details"
                >
                  Fryderyk Chopin was born in Żelazowa Wola, 46 kilometres west of Warsaw, in what was then the Duchy of Warsaw, a Polish state established by Napoleon. The parish baptismal record gives his birthday as 22 February 1810, and cites his given names in the Latin form Fridericus Franciscus (in Polish, he was Fryderyk Franciszek). However, the composer and his family used the birthdate 1 March, which is now generally accepted as the correct date.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`default version for sections should render expanded version after click on summary 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiPaper-root MuiAccordion-root makeStyles-root makeStyles-bordersAll Mui-expanded MuiAccordion-rounded MuiPaper-elevation0 MuiPaper-rounded"
    >
      <div
        aria-disabled="false"
        aria-expanded="true"
        class="MuiButtonBase-root MuiAccordionSummary-root WithStyles(ForwardRef(AccordionSummary))-root makeStyles-summary Mui-expanded"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiAccordionSummary-content WithStyles(ForwardRef(AccordionSummary))-content makeStyles-content Mui-expanded"
        >
          <div>
            Fryderyk Chopin
          </div>
          <div
            class="makeStyles-expandIconAlignTop"
          >
            <button
              class="MuiButtonBase-root PicassoButton-small PicassoButtonAction-small PicassoButton-secondary PicassoButton-root PicassoButtonAction-root"
              data-component-type="button"
              tabindex="0"
              type="button"
            >
              <span
                class="Container-centerAlignItems Container-flex Container-inline PicassoButton-content PicassoButtonAction-content"
              >
                <svg
                  class="SvgArrowDownMinor16-root PicassoButton-icon PicassoButtonAction-icon makeStyles-expandIcon makeStyles-expandIconExpanded"
                  style="min-width: 16px; min-height: 16px;"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M11.997 5.29l.707.707-4 4-.707.707-.707-.707-4-4 .707-.707 4 4 4-4z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiCollapse-container"
        style="min-height: 0px; height: 0px; transition-duration: 0ms;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              role="region"
            >
              <div
                class="MuiAccordionDetails-root AccordionDetails-root makeStyles-details"
              >
                <div
                  id="details"
                >
                  Fryderyk Chopin was born in Żelazowa Wola, 46 kilometres west of Warsaw, in what was then the Duchy of Warsaw, a Polish state established by Napoleon. The parish baptismal record gives his birthday as 22 February 1810, and cites his given names in the Latin form Fridericus Franciscus (in Polish, he was Fryderyk Franciszek). However, the composer and his family used the birthdate 1 March, which is now generally accepted as the correct date.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
